--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a{
 p{
 	margin-left: 20%;
 	margin-right: 20%;
-	font-family:cursive;
+	font-family:sans-serif;
 	font-size: 200%;
 	text-align: justify-all;
 
