--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 <html>
 <head>
 	<title>kindo for life baby</title>
+	<style type="text/css">
+		body{
+			padding: 0;
+			margin: 0;
+		}
+
+		p{
+			margin-right: 10%;
+			margin-left: 10%;
+			font-size: 200%;
+			font-family: sans-serif;
+		}
+		ul li{
+			margin-right: 30%;
+			margin-left: 30%;
+			font-size: 200%;
+		}
+		h1 ,h2 {
+			text-align: center;
+			font-weight: bold;
+			font-family: "Times New Roman", Times, serif;
+		
+		}
+
+	</style>
 	
 
 <body>
@@ -56,26 +81,6 @@ There’s no guaranteed source of great ideas, but they do tend to be generated 
 The key is to use your business’s culture and processes to capture these ideas when they happen, wherever they come from. Staff suggestion boxes and allocated creative time can work well, but sometimes all that's required is a clear message from the boss that all ideas are welcome.
 
 </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
